# toy-bootboot

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md  test.sh
.cargo/: config.toml
src/: acpi.rs  bootboot.rs  elf.rs  environment.rs  framebuffer.rs  fs.rs  header.rs  initrd.rs  main.rs  mmap.rs  smbios.rs  time.rs  utils.rs
src/bootboot/: environment.rs  header.rs  initrd.rs  mmap.rs
src/initrd/: ustar.rs
test/: CONFIG
